--- a/tower_client/tests/test_model.html
+++ b/tower_client/tests/test_model.html
@@ -16,6 +16,10 @@
   <script type='text/javascript' src='../js/model/tower_object.js'></script>
   <script type='text/javascript' src='../js/controller/controller.js'></script>
   <script type='text/javascript' src='../js/controller/start_command.js'></script>
+  <script type='text/javascript' src='../js/controller/embattle_command.js'></script>
+  <script type='text/javascript' src='../js/controller/unembattle_command.js'></script>
+  <script type='text/javascript' src='../js/controller/upgrade_command.js'></script>
+  <script type='text/javascript' src='../js/controller/commit_command.js'></script>
   <script type='text/javascript' src='../js/util/util.js'></script>
   <script type='text/javascript' src='../js/config/config.js'></script>
 </head>
